# guzvarizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_errors.txt
assets/ui/: README.md
assets/ui/manifests/: gd0_naming_sanity.md  gd0_setup_status.md  gd0_style_board.md  gd1_shell_manifest.json  gd2_knob_manifest.json  gd3_controls_manifest.json  gd4_meter_strip_overlay_manifest.json  gd5_delivery_checklist.md  gd5_final_package_manifest.json  layout_map_1180x760.json  layout_map_1180x760.template.json
assets/ui/source/: README.md
docs/: 00_PROJECT_PLAN.md  100_BACKEND_HOTFIX_AGENT_PROMPT.md  101_FRONTEND_FIX_TASKS.md  102_FRONTEND_FIX_AGENT_PROMPT.md  103_GRAPHIC_ASSET_SPEC.md  104_GRAPHIC_DESIGNER_PROMPT.md  10_FRONTEND_AGENT_RULES.md  20_BACKEND_AGENT_RULES.md  30_ORCHESTRATOR_RULES.md  40_PARAMETER_SPEC.md  50_TECHSTACK_DECISION.md  60_UI_COMPONENT_BLUEPRINT.md  70_IMPLEMENTATION_STRATEGY.md  80_RELEASE_TARGETS.md  90_MASTER_IMPLEMENTATION_PLAN.md  91_FRONTEND_AGENT_PHASED_TASKS.md  92_BACKEND_AGENT_PHASED_TASKS.md  93_FRONTEND_AGENT_PROMPT.md  94_BACKEND_AGENT_PROMPT.md  95_PHASE_REPORT_TEMPLATE.md  96_AGENT_EXECUTION_RULES.md  97_BACKEND_FIX_TASKS.md  98_BACKEND_FIX_AGENT_PROMPT.md  99_BACKEND_HOTFIX_TASKS.md
docs/reports/: BE-0_report.md  BE-1_report.md  BE-2_report.md  BE-3_report.md  BE-4_report.md  BE-5_report.md  BF-0_report.md  BF-1_report.md  BF-2_report.md  BF-3_report.md  BF-4_5_report.md  BF2-0_report.md  BF2-1_report.md  BF2-2_report.md  BF2-3_report.md  BF2-4_5_report.md  BHF-0_report.md  BHF-1_report.md  BHF-2_report.md  BHF-3_report.md  BHF-4_5_report.md  FE-0_report.md  FE-1_report.md  FE-2_report.md  FE-3_report.md  FE-4_report.md  FF-0_report.md  FF-1_report.md  FF-2_report.md  FF-3_report.md  FF-4_report.md  FF-5_report.md  GD-0_report.md  GD-1_report.md  GD-2_report.md  GD-3_report.md  GD-4_report.md  GD-5_report.md
scripts/: generate_gd1_shell_assets.py  generate_gd2_knob_assets.py  generate_gd3_control_assets.py  generate_gd4_meter_strip_overlay_assets.py  generate_gd5_final_package.py
src/dsp/compressor/: CompressorCore.cpp  CompressorCore.h
src/dsp/modes/: GuzvanjeDsp.cpp  GuzvanjeDsp.h  VibeModeConstants.h
src/dsp/tone_shaper/: ToneShaper.cpp  ToneShaper.h
src/dsp/util/: LfoOscillator.cpp  LfoOscillator.h
src/host/: GuzvarizerProcessor.cpp  GuzvarizerProcessor.h
src/host/bridge/: AtomicMeterBridgeClient.h  MeterBridgeSource.h
src/host/parameters/: ParameterLayout.cpp  ParameterLayout.h
src/shared/constants/: UiMetrics.h
src/shared/types/: LfoSyncDivision.h  ParameterIds.h  VibeMode.h
src/ui/app/: PluginEditor.cpp  PluginEditor.h
src/ui/assets/: UiAssetRepository.cpp  (+1 more)
(+36 files in other folders)
